[package]
name = "nyan-genelator"
version = "0.1.0"
authors = ["syobon-tech <syobon_tech@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1"
wasm-bindgen = "0.2.69"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]